fix: [collapse]修复边框问题 fix #433

--- a/components/collapse/style/index.less
+++ b/components/collapse/style/index.less
@@ -9,6 +9,9 @@
   &-panel:last-child {
     border-top: none;
   }
+  &-panel:first-child {
+    border-top: @collapse-border-width solid @collapse-border-color;
+  }
   &-panel {
     display: inline-flex;
     flex-direction: column;
